@@ -48,6 +48,7 @@ class Arg
 
     char const          *d_msg;                 // info about erroneous opt.
     int                  d_getOpt;              // value returned by getopt()
+    int                  d_beyondDashes;        // idx of 1st arg beyond --
 
     static Arg            *s_arg;               // points to Singleton Arg
 
@@ -86,6 +87,8 @@ class Arg
                                 LongOption const * const end,
                                 int argc, char **argv);
         static Arg &instance();        
+
+        int beyondDashes() const;
 
         std::string const &basename() const;
         size_t nArgs() const;
@@ -175,6 +178,11 @@ inline size_t Arg::nOptions() const
 inline size_t Arg::nLongOptions() const
 {
     return d_nLongOptions;
+}
+
+inline int Arg::beyondDashes() const
+{
+    return d_beyondDashes;
 }
 
 inline size_t Arg::option(std::string *value, int optChar) const
