@@ -1,7 +1,5 @@
 #include "arg"
 
-#include <cstdio>
-
 #include <iostream>
 #include <functional>
 #include <algorithm>
@@ -34,3 +32,4 @@ namespace FBB
 
 using namespace FBB;
 using namespace std;
+
