@@ -1,3 +1,9 @@
+bobcat (2.22.10)
+
+  * Added member int beyondDashes() returning the index of the first argument
+    beyond a -- argument (or -1)
+
+
 bobcat (2.22.00)
 
   * Repaired bug in ArgConfig: following load() options in the config. file
